@@ -1460,11 +1460,11 @@ function reports_edit() {
 	reports_tabs(get_request_var('id'));
 
 	if (isset($report['id'])) {
-		$report['mailtime'] = date(reports_date_time_format(), $report['mailtime']);
-		$header_label       = __('[edit: %s]', $report['name']);
+		$report['mailtime'] = date('Y-m-d H:i', strtotime(date('Y-m-d H:i:00', $report['mailtime'])));
+		$header_label = __('[edit: %s]', $report['name']);
 	} else {
-		$report['mailtime'] = date(reports_date_time_format(), floor(time() / read_config_option('poller_interval')) * read_config_option('poller_interval'));
-		$header_label       = __('[new]');
+		$report['mailtime'] = date('Y-m-d H:i', strtotime(date('Y-m-d H:i:00', floor(time() / read_config_option('poller_interval')) * read_config_option('poller_interval'))));
+		$header_label = __('[new]');
 	}
 
 	/* if there was an error on the form, display the date in the correct format */
@@ -1502,6 +1502,7 @@ function reports_edit() {
 					$('#mailtime').datetimepicker({
 						minuteGrid: 10,
 						stepMinute: 1,
+						showSecond: false,
 						showAnim: 'slideDown',
 						numberOfMonths: 1,
 						timeFormat: 'HH:mm',
